k8s/monitoring/controllers/redstone-01/ingress/ingress.yaml
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-ingress
  namespace: monitoring
spec:
  ingressClassName: nginx
  tls:
    - secretName: grafana-cert-tls
  rules:
    - http:
        paths:
        - path: /grafana
          pathType: Prefix
          backend:
            service:
              name: grafana
              port:
                number: 80
